--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boilerplate</title>
     <link rel="stylesheet" type="text/css" href="/styles.css">
+    <link rel="stylesheet" type="text/css" href="/dist/styles.css">
 </head>
 <body>
 <div id="appRoot"></div>
-<script src="bundle.js"></script>
+<script src="/dist/bundle.js"></script>
 </body>
 </html>
